# foam-spi

./: SPI.hs  clash-cores.cabal  stack.yaml
src/Clash/Cores/: SPI.hs
