cabal-version:       >=1.10

name:                clash-cores
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  HS-Source-Dirs:      src
  exposed-modules:     Clash.Cores.SPI
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13,
                       clash-prelude,
                       ghc-typelits-natnormalise,
                       ghc-typelits-extra,
                       ghc-typelits-knownnat
  -- hs-source-dirs:
  default-language:    Haskell2010
